[package]
name = "wait-on"
version = "0.0.12"
edition = "2021"
description = "Library and CLI Utility to wait on the availability of resources such as Files, HTTP Servers, Ports & Sockets"
categories = ["web-programming", "network-programming"]
homepage = "https://github.com/EstebanBorai/wait-on"
repository = "https://github.com/EstebanBorai/wait-on"
readme = "README.md"
keywords = ["wait", "wait-on", "file", "http", "socket"]
license = "MIT OR Apache-2.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "wait_on"
path = "src/lib.rs"

[[bin]]
name = "wait-on"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["std", "derive", "env"] }
humantime = "2.1.0"
pin-project = "1.1.5"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.37.0", features = ["io-util", "rt-multi-thread", "macros", "net"] }
notify = "6.1.1"
